--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.9.0"
+  }
 }
