--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
-  "name": "socialnitt",
+  "name": "SocialNITT",
   "version": "1.0.0",
+  "description": "MONGODB_URL =",
+  "homepage": "#",
+  "bugs": {
+    "url": "#"
+  },
+  "repository": {
+    "type": "git",
+    "url": "#"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": "",
   "dependencies": {
-    "axios": "^1.9.0"
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
+    "cloudinary": "^2.6.1",
+    "express-fileupload": "^1.5.1",
+    "react-redux": "^9.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.2",
+    "vite": "^6.3.5"
   }
 }
