--- a/frontend/SocialNITT/package.json
+++ b/frontend/SocialNITT/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "web-vitals": "^5.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.4.19"
   },
   "scripts": {
     "dev": "vite",
