--- a/frontend/SocialNITT/.gitignore
+++ b/frontend/SocialNITT/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+ uploads/*
+!uploads/.gitkeep
+
+# Or if you want to keep a default avatar
+uploads/*
+!uploads/default-avatar.png
