adding new features

--- a/frontend/SocialNITT/.gitignore
+++ b/frontend/SocialNITT/.gitignore
@@ -28,3 +28,9 @@ dist-ssr
 # Or if you want to keep a default avatar
 uploads/*
 !uploads/default-avatar.png
+
+1st week work
+2nd week tasks
+
+package-lock.json
+vite.config.js
