--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
-     "jsonwebtoken": "^9.0.2",
+    "googleapis": "^150.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "log4js": "^6.9.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
